--- a/vue-mart/package.json
+++ b/vue-mart/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cube-ui": "^1.12.34",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.11.0",
+    "koa-jwt": "^3.6.0",
+    "koa-router": "^7.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
